tests/ported/snapshots/tests__ported__c_tests__loads_values.snap
---
source: tests/ported/c_tests.rs
expression: "(&sbdf, all_values)"
---
(Sbdf(
  file_header: FileHeader(
    major_version: 1,
    minor_version: 0,
  ),
  table_metadata: TableMetadata(
    metadata: [],
    columns: [
      ColumnMetadata(
        name: "A",
        ty: Int,
        other: [],
      ),
      ColumnMetadata(
        name: "B",
        ty: String,
        other: [],
      ),
      ColumnMetadata(
        name: "C",
        ty: Double,
        other: [],
      ),
    ],
  ),
  table_slices: [
    TableSlice(
      column_slices: [
        ColumnSlice(
          values: Plain(IntArray(IntArray([
            1,
            2,
            0,
          ]))),
          properties: ColumnProperties(
            is_invalid: Some(EncodedBitArray(
              bit_count: 3,
              bytes: [
                32,
              ],
            )),
            error_code: None,
            has_replaced_value: None,
            other: [],
          ),
        ),
        ColumnSlice(
          values: Plain(StringArray(StringArray([
            "Foo",
            "Fie",
            "Fum",
          ]))),
          properties: ColumnProperties(
            is_invalid: None,
            error_code: None,
            has_replaced_value: None,
            other: [],
          ),
        ),
        ColumnSlice(
          values: Plain(DoubleArray(DoubleArray([
            3.5,
            100.0,
            NaN,
          ]))),
          properties: ColumnProperties(
            is_invalid: None,
            error_code: None,
            has_replaced_value: None,
            other: [],
          ),
        ),
      ],
    ),
  ],
), [
  [
    IntArray(IntArray([
      1,
      2,
      0,
    ])),
    StringArray(StringArray([
      "Foo",
      "Fie",
      "Fum",
    ])),
    DoubleArray(DoubleArray([
      3.5,
      100.0,
      NaN,
    ])),
  ],
])
