tests/ported/snapshots/tests__ported__c_tests__sample_100_double.snap
---
source: tests/ported/c_tests.rs
expression: sbdf
---
Sbdf(
  file_header: FileHeader(
    major_version: 1,
    minor_version: 0,
  ),
  table_metadata: TableMetadata(
    metadata: [
      Metadata(
        name: "SbdfTest.TableMetaDouble",
        value: Double(3.14),
        default_value: None,
      ),
    ],
    columns: [
      ColumnMetadata(
        name: "Double",
        ty: Double,
        other: [
          Metadata(
            name: "SbdfTest.ColumnMetaDouble0",
            value: Double(3.14),
            default_value: None,
          ),
        ],
      ),
    ],
  ),
  table_slices: [
    TableSlice(
      column_slices: [
        ColumnSlice(
          values: Plain(
            value: DoubleArray(DoubleArray([
              103.62,
              106.76,
              0.0,
              113.04,
              116.18,
              0.0,
              122.46000000000001,
              125.60000000000001,
              128.74,
              131.88,
              135.02,
              0.0,
              0.0,
              141.3,
              144.44,
              147.58,
              150.72,
              153.86,
              157.0,
              0.0,
              0.0,
              163.28,
              166.42000000000002,
              169.56,
              172.70000000000002,
              175.84,
              0.0,
              182.12,
              185.26000000000002,
              0.0,
              191.54000000000002,
              194.68,
              197.82000000000002,
              0.0,
              200.96,
              204.1,
              207.24,
              210.38,
              0.0,
              213.52,
              0.0,
              219.8,
              222.94,
              89884656743115790000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000.0,
              226.08,
              229.22,
              232.36,
              0.0,
              -89884656743115790000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000.0,
              238.64000000000001,
              241.78,
              244.92000000000002,
              248.06,
              251.20000000000002,
              0.0,
              NaN,
              0.0,
              260.62,
              263.76,
              266.90000000000003,
              270.04,
              0.0,
              276.32,
              279.46000000000004,
              282.6,
              0.0,
              -inf,
              288.88,
              0.0,
              295.16,
              298.3,
              301.44,
              304.58,
              307.72,
              0.0,
              0.0,
              317.14,
              320.28000000000003,
              323.42,
              326.56,
              329.7,
              332.84000000000003,
              0.0,
              0.0,
              342.26,
              345.40000000000003,
              348.54,
              351.68,
              354.82,
              0.0,
              357.96000000000004,
              361.1,
              0.0,
              367.38,
              370.52000000000004,
              373.66,
              0.0,
              379.94,
              383.08000000000004,
              386.22,
            ])),
          ),
          properties: ColumnProperties(
            is_invalid: Some(EncodedBitArray(
              bit_count: 100,
              bytes: [
                4,
                8,
                16,
                32,
                64,
                128,
                2,
                4,
                8,
                16,
                32,
                64,
                128,
              ],
            )),
            error_code: Some(Plain(
              value: StringArray(StringArray([
                "",
                "",
                "Error 35",
                "",
                "",
                "",
                "",
                "",
                "",
                "",
                "",
                "Error 44",
                "",
                "",
                "",
                "",
                "",
                "",
                "",
                "",
                "Error 53",
                "",
                "",
                "",
                "",
                "",
                "",
                "",
                "",
                "Error 62",
                "",
                "",
                "",
                "",
                "",
                "",
                "",
                "",
                "Error 71",
                "",
                "",
                "",
                "",
                "",
                "",
                "",
                "",
                "Error 80",
                "",
                "",
                "",
                "",
                "",
                "",
                "",
                "",
                "Error 89",
                "",
                "",
                "",
                "",
                "",
                "",
                "",
                "",
                "Error 98",
                "",
                "",
                "",
                "",
                "",
                "",
                "",
                "",
                "Error 107",
                "",
                "",
                "",
                "",
                "",
                "",
                "",
                "",
                "Error 116",
                "",
                "",
                "",
                "",
                "",
                "",
                "",
                "",
                "Error 125",
                "",
                "",
                "",
                "",
                "",
                "",
                "",
              ])),
            )),
            has_replaced_value: Some(EncodedBitArray(
              bit_count: 100,
              bytes: [
                1,
                0,
                0,
                1,
                0,
                16,
                1,
                0,
                16,
                1,
                0,
                16,
                0,
              ],
            )),
            other: [],
          ),
        ),
      ],
    ),
  ],
)
