tests/ported/snapshots/tests__ported__c_tests__sample_100_float.snap
---
source: tests/ported/c_tests.rs
expression: sbdf
---
Sbdf(
  file_header: FileHeader(
    major_version: 1,
    minor_version: 0,
  ),
  table_metadata: TableMetadata(
    metadata: [
      Metadata(
        name: "SbdfTest.TableMetaFloat",
        value: Float(0.33333334),
        default_value: None,
      ),
    ],
    columns: [
      ColumnMetadata(
        name: "Float",
        ty: Float,
        other: [
          Metadata(
            name: "SbdfTest.ColumnMetaFloat0",
            value: Float(0.33333334),
            default_value: None,
          ),
        ],
      ),
    ],
  ),
  table_slices: [
    TableSlice(
      column_slices: [
        ColumnSlice(
          values: Plain(
            value: FloatArray([
              11.0,
              11.333333,
              0.0,
              12.0,
              12.333333,
              0.0,
              13.0,
              13.333333,
              13.666667,
              14.0,
              14.333333,
              0.0,
              0.0,
              15.0,
              15.333333,
              15.666667,
              16.0,
              16.333334,
              16.666666,
              0.0,
              0.0,
              17.333334,
              17.666666,
              18.0,
              18.333334,
              18.666666,
              0.0,
              19.333334,
              19.666666,
              0.0,
              20.333334,
              20.666666,
              21.0,
              0.0,
              21.333334,
              21.666666,
              22.0,
              22.333334,
              0.0,
              22.666666,
              0.0,
              23.333334,
              23.666666,
              170141170000000000000000000000000000000.0,
              24.0,
              24.333334,
              24.666666,
              0.0,
              -170141170000000000000000000000000000000.0,
              25.333334,
              25.666666,
              26.0,
              26.333334,
              26.666666,
              0.0,
              NaN,
              0.0,
              27.666666,
              28.0,
              28.333334,
              28.666666,
              0.0,
              29.333334,
              29.666666,
              30.0,
              0.0,
              -inf,
              30.666666,
              0.0,
              31.333334,
              31.666666,
              32.0,
              32.333332,
              32.666668,
              0.0,
              0.0,
              33.666668,
              34.0,
              34.333332,
              34.666668,
              35.0,
              35.333332,
              0.0,
              0.0,
              36.333332,
              36.666668,
              37.0,
              37.333332,
              37.666668,
              0.0,
              38.0,
              38.333332,
              0.0,
              39.0,
              39.333332,
              39.666668,
              0.0,
              40.333332,
              40.666668,
              41.0,
            ]),
          ),
          properties: [
            Property(
              name: "IsInvalid",
              values: BitArray(
                bit_count: 100,
                bytes: [
                  4,
                  8,
                  16,
                  32,
                  64,
                  128,
                  2,
                  4,
                  8,
                  16,
                  32,
                  64,
                  128,
                ],
              ),
            ),
            Property(
              name: "ErrorCode",
              values: Plain(
                value: StringArray([
                  "",
                  "",
                  "Error 35",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "Error 44",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "Error 53",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "Error 62",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "Error 71",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "Error 80",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "Error 89",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "Error 98",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "Error 107",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "Error 116",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "Error 125",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                ]),
              ),
            ),
            Property(
              name: "HasReplacedValue",
              values: BitArray(
                bit_count: 100,
                bytes: [
                  1,
                  0,
                  0,
                  1,
                  0,
                  16,
                  1,
                  0,
                  16,
                  1,
                  0,
                  16,
                  0,
                ],
              ),
            ),
          ],
        ),
      ],
    ),
  ],
)
