tests/ported/snapshots/tests__ported__c_tests__sample_100_integer.snap
---
source: tests/ported/c_tests.rs
expression: sbdf
---
Sbdf(
  file_header: FileHeader(
    major_version: 1,
    minor_version: 0,
  ),
  table_metadata: TableMetadata(
    metadata: [
      Metadata(
        name: "SbdfTest.TableMetaInteger",
        value: Int(3),
      ),
    ],
    columns: [
      ColumnMetadata(
        name: "Integer",
        ty: Int,
        other: [
          Metadata(
            name: "SbdfTest.ColumnMetaInteger0",
            value: Int(3),
          ),
        ],
      ),
    ],
  ),
  table_slices: [
    TableSlice(
      column_slices: [
        ColumnSlice(
          values: Plain(
            value: IntArray([
              67,
              69,
              0,
              73,
              75,
              0,
              79,
              81,
              83,
              85,
              87,
              0,
              0,
              91,
              93,
              95,
              97,
              99,
              101,
              0,
              0,
              107,
              109,
              111,
              113,
              115,
              0,
              119,
              121,
              0,
              125,
              127,
              129,
              0,
              131,
              133,
              135,
              137,
              0,
              141,
              0,
              145,
              147,
              149,
              151,
              153,
              155,
              0,
              159,
              161,
              163,
              165,
              167,
              169,
              0,
              171,
              0,
              175,
              177,
              179,
              181,
              0,
              185,
              187,
              189,
              0,
              193,
              195,
              0,
              199,
              201,
              203,
              205,
              207,
              0,
              0,
              211,
              213,
              215,
              217,
              219,
              221,
              0,
              0,
              227,
              229,
              231,
              233,
              235,
              0,
              239,
              241,
              0,
              245,
              247,
              249,
              0,
              251,
              253,
              255,
            ]),
          ),
          properties: [
            Property(
              name: "IsInvalid",
              values: BitArray(
                bit_count: 100,
                bytes: [
                  4,
                  8,
                  16,
                  32,
                  64,
                  128,
                  2,
                  4,
                  8,
                  16,
                  32,
                  64,
                  128,
                ],
              ),
            ),
            Property(
              name: "ErrorCode",
              values: Plain(
                value: StringArray([
                  "",
                  "",
                  "Error 35",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "Error 44",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "Error 53",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "Error 62",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "Error 71",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "Error 80",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "Error 89",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "Error 98",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "Error 107",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "Error 116",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "Error 125",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                ]),
              ),
            ),
            Property(
              name: "HasReplacedValue",
              values: BitArray(
                bit_count: 100,
                bytes: [
                  1,
                  0,
                  0,
                  1,
                  0,
                  16,
                  1,
                  0,
                  16,
                  1,
                  0,
                  16,
                  0,
                ],
              ),
            ),
          ],
        ),
      ],
    ),
  ],
)
