tests/ported/snapshots/tests__ported__c_tests__sample_100_long.snap
---
source: tests/ported/c_tests.rs
expression: sbdf
---
Sbdf(
  file_header: FileHeader(
    major_version: 1,
    minor_version: 0,
  ),
  table_metadata: TableMetadata(
    metadata: [
      Metadata(
        name: "SbdfTest.TableMetaLong",
        value: Long(2),
      ),
    ],
    columns: [
      ColumnMetadata(
        name: "Long",
        ty: Long,
        other: [
          Metadata(
            name: "SbdfTest.ColumnMetaLong0",
            value: Long(2),
          ),
        ],
      ),
    ],
  ),
  table_slices: [
    TableSlice(
      column_slices: [
        ColumnSlice(
          values: Plain(
            value: LongArray([
              66,
              68,
              0,
              72,
              74,
              0,
              78,
              80,
              82,
              84,
              86,
              0,
              0,
              90,
              92,
              94,
              96,
              98,
              100,
              0,
              0,
              106,
              108,
              110,
              112,
              114,
              0,
              118,
              120,
              0,
              124,
              126,
              128,
              0,
              130,
              132,
              134,
              136,
              0,
              140,
              0,
              144,
              146,
              148,
              150,
              152,
              154,
              0,
              158,
              160,
              162,
              164,
              166,
              168,
              0,
              170,
              0,
              174,
              176,
              178,
              180,
              0,
              184,
              186,
              188,
              0,
              192,
              194,
              0,
              198,
              200,
              202,
              204,
              206,
              0,
              0,
              210,
              212,
              214,
              216,
              218,
              220,
              0,
              0,
              226,
              228,
              230,
              232,
              234,
              0,
              238,
              240,
              0,
              244,
              246,
              248,
              0,
              250,
              252,
              254,
            ]),
          ),
          properties: [
            Property(
              name: "IsInvalid",
              values: BitArray(
                bit_count: 100,
                bytes: [
                  4,
                  8,
                  16,
                  32,
                  64,
                  128,
                  2,
                  4,
                  8,
                  16,
                  32,
                  64,
                  128,
                ],
              ),
            ),
            Property(
              name: "ErrorCode",
              values: Plain(
                value: StringArray([
                  "",
                  "",
                  "Error 35",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "Error 44",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "Error 53",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "Error 62",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "Error 71",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "Error 80",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "Error 89",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "Error 98",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "Error 107",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "Error 116",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "Error 125",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                ]),
              ),
            ),
            Property(
              name: "HasReplacedValue",
              values: BitArray(
                bit_count: 100,
                bytes: [
                  1,
                  0,
                  0,
                  1,
                  0,
                  16,
                  1,
                  0,
                  16,
                  1,
                  0,
                  16,
                  0,
                ],
              ),
            ),
          ],
        ),
      ],
    ),
  ],
)
