tests/ported/snapshots/tests__ported__c_tests__sample_100_string.snap
---
source: tests/ported/c_tests.rs
expression: sbdf
---
Sbdf(
  file_header: FileHeader(
    major_version: 1,
    minor_version: 0,
  ),
  table_metadata: TableMetadata(
    metadata: [
      Metadata(
        name: "SbdfTest.TableMetaString",
        value: String("The"),
        default_value: None,
      ),
    ],
    columns: [
      ColumnMetadata(
        name: "String",
        ty: String,
        other: [
          Metadata(
            name: "SbdfTest.ColumnMetaString0",
            value: String("The"),
            default_value: None,
          ),
        ],
      ),
    ],
  ),
  table_slices: [
    TableSlice(
      column_slices: [
        ColumnSlice(
          values: Plain(StringArray(StringArray([
            "The",
            "quick",
            "",
            "fox",
            "jumps",
            "",
            "the",
            "lazy",
            "dog",
            "Flygande",
            "bäckasiner",
            "",
            "",
            "hwila",
            "på",
            "mjuka",
            "tuvor",
            "Voix",
            "ambiguë",
            "",
            "",
            "qui,",
            "au",
            "zéphyr,",
            "préfère",
            "les",
            "",
            "de",
            "kiwis",
            "",
            "千利奴流乎和加",
            "餘多連曽津祢那",
            "良牟有為能於久",
            "",
            "阿佐伎喩女美之",
            "恵比毛勢須",
            "The",
            "quick",
            "",
            "fox",
            "",
            "over",
            "the",
            "lazy",
            "dog",
            "Flygande",
            "bäckasiner",
            "",
            "strax",
            "hwila",
            "på",
            "mjuka",
            "tuvor",
            "Voix",
            "",
            "d\'un",
            "",
            "qui,",
            "au",
            "zéphyr,",
            "préfère",
            "",
            "jattes",
            "de",
            "kiwis",
            "",
            "千利奴流乎和加",
            "餘多連曽津祢那",
            "",
            "耶万計不己衣天",
            "阿佐伎喩女美之",
            "恵比毛勢須",
            "The",
            "quick",
            "",
            "",
            "jumps",
            "over",
            "the",
            "lazy",
            "dog",
            "Flygande",
            "",
            "",
            "strax",
            "hwila",
            "på",
            "mjuka",
            "tuvor",
            "",
            "ambiguë",
            "d\'un",
            "",
            "qui,",
            "au",
            "zéphyr,",
            "",
            "les",
            "jattes",
            "de",
          ]))),
          properties: ColumnProperties(
            is_invalid: Some(EncodedBitArray(
              bit_count: 100,
              bytes: [
                4,
                8,
                16,
                32,
                64,
                128,
                2,
                4,
                8,
                16,
                32,
                64,
                128,
              ],
            )),
            error_code: Some(Plain(StringArray(StringArray([
              "",
              "",
              "Error 35",
              "",
              "",
              "",
              "",
              "",
              "",
              "",
              "",
              "Error 44",
              "",
              "",
              "",
              "",
              "",
              "",
              "",
              "",
              "Error 53",
              "",
              "",
              "",
              "",
              "",
              "",
              "",
              "",
              "Error 62",
              "",
              "",
              "",
              "",
              "",
              "",
              "",
              "",
              "Error 71",
              "",
              "",
              "",
              "",
              "",
              "",
              "",
              "",
              "Error 80",
              "",
              "",
              "",
              "",
              "",
              "",
              "",
              "",
              "Error 89",
              "",
              "",
              "",
              "",
              "",
              "",
              "",
              "",
              "Error 98",
              "",
              "",
              "",
              "",
              "",
              "",
              "",
              "",
              "Error 107",
              "",
              "",
              "",
              "",
              "",
              "",
              "",
              "",
              "Error 116",
              "",
              "",
              "",
              "",
              "",
              "",
              "",
              "",
              "Error 125",
              "",
              "",
              "",
              "",
              "",
              "",
              "",
            ])))),
            has_replaced_value: Some(EncodedBitArray(
              bit_count: 100,
              bytes: [
                1,
                0,
                0,
                1,
                0,
                16,
                1,
                0,
                16,
                1,
                0,
                16,
                0,
              ],
            )),
            other: [],
          ),
        ),
      ],
    ),
  ],
)
